--- a/css/style.production.css
+++ b/css/style.production.css
@@ -285,21 +285,13 @@ button:focus,
 
 .grid__item {
   display: inline-block;
-  width: 33%;
+  width: 25%;
   background: #fff;
   padding: 10px;
   width: auto;
   color: #000;
   opacity: 0.6;
   text-align: center;
-}
-
-.grid__item:last-child {
-  -ms-grid-column: 3;
-  grid-column: 3 / 3;
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 2;
-  grid-row: 1 / 3;
 }
 
 .grid__item:hover {
@@ -314,8 +306,8 @@ button:focus,
 }
 
 .grid__item img {
-  height: 500px;
-  width: 500px;
+  height: 300px;
+  width: 300px;
   margin: auto;
   margin-top: 20px;
 }
@@ -440,7 +432,7 @@ thead {
     Other possible values include screen, print, and speech (the value all encompasses all of these).
  */
 
-@media all and (min-width: 500px) and (max-width: 750px) {
+@media all and (min-width: 500px) and (max-width: 965px) {
   .grid {
     -ms-grid-columns: 1fr 20px 1fr;
     grid-template-columns: 1fr 1fr;
@@ -450,10 +442,6 @@ thead {
 @media all and (max-width: 750px) {
   .grid {
     grid-gap: 10px;
-  }
-  .grid__item:last-child {
-    grid-column: auto / auto;
-    grid-row: auto / auto;
   }
   h1 {
     font-size: 22px;
@@ -476,7 +464,7 @@ thead {
   }
 }
 
-@media all and (max-width: 500px) {
+@media all and (max-width: 717px) {
   .grid {
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
@@ -487,6 +475,10 @@ thead {
   .grid__item img {
     height: 200px;
     width: 200px;
+  }
+  .grid__item {
+    margin-left: 20px;
+    margin-right: 20px;
   }
 }
 
