--- a/css/styles.css
+++ b/css/styles.css
@@ -239,18 +239,13 @@ button:focus,
 
 .grid__item {
   display: inline-block;
-  width: 33%;
+  width: 25%;
   background: var(--white);
   padding: 10px;
   width: auto;
   color: var(--black);
   opacity: 0.6;
   text-align: center;
-}
-
-.grid__item:last-child {
-  grid-column: 3 / 3;
-  grid-row: 1 / 3;
 }
 
 .grid__item:hover {
@@ -262,8 +257,8 @@ button:focus,
 }
 
 .grid__item img {
-  height: 500px;
-  width: 500px;
+  height: 300px;
+  width: 300px;
   margin: auto;
   margin-top: 20px;
 }
@@ -338,7 +333,7 @@ thead {
     Other possible values include screen, print, and speech (the value all encompasses all of these).
  */
 
-@media all and (min-width: 500px) and (max-width: 750px) {
+@media all and (min-width: 500px) and (max-width: 965px) {
   .grid {
     grid-template-columns: 1fr 1fr;
   }
@@ -347,10 +342,6 @@ thead {
 @media all and (max-width: 750px) {
   .grid {
     grid-gap: 10px;
-  }
-  .grid__item:last-child {
-    grid-column: auto / auto;
-    grid-row: auto / auto;
   }
   h1 {
     font-size: 22px;
@@ -373,7 +364,7 @@ thead {
   }
 }
 
-@media all and (max-width: 500px) {
+@media all and (max-width: 717px) {
   .grid {
     grid-template-columns: 1fr;
   }
@@ -383,6 +374,10 @@ thead {
   .grid__item img {
     height: 200px;
     width: 200px;
+  }
+  .grid__item {
+    margin-left: 20px;
+    margin-right: 20px;
   }
 }
 
